# PlanktonAudioServer

./: .gitignore  README.md
AudioServer/: CMakeLists.txt
AudioServer/cmake/: FindPlankAudio.cmake  FindSndFile.cmake
AudioServer/dependencies/sndfile/lib/: libsndfile.so.1.0.28
AudioServer/src/: main.cpp  server.cpp  server.h
Client/: CMakeLists.txt
Client/src/: client.cpp  client.h
LibAudioClient/: CMakeLists.txt
LibAudioClient/src/: client.cpp  client.h
Server/: CMakeLists.txt
Server/cmake/: FindPortAudio.cmake
Server/src/: audio.cpp  audio.h  main.cpp  main.h  server.cpp  server.h  wave.cpp  wave.h
pyaudioclient/: setup.py
pyaudioclient/pyaudioclient/: __init__.py
